--- a/business-landing-page.html
+++ b/business-landing-page.html
@@ -956,7 +956,7 @@
 
         <div class="row">
           <div class="col col-md-8 offset-md-2">
-            <div class="container">
+            <div class="container landing_page_faq">
               <div class="accordion bg-alt-dark-theme" id="accordionExample">
                 <div class="accordion-item bg-alt-dark-theme">
                   <h2 class="accordion-header">
