--- a/freelance-landing-page.html
+++ b/freelance-landing-page.html
@@ -771,7 +771,7 @@
 
         <div class="row">
           <div class="col col-md-8 offset-md-2">
-            <div class="container">
+            <div class="container landing_page_faq">
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header">
