project status card add.

--- a/business/project-initial/project-initial-business-details-page.html
+++ b/business/project-initial/project-initial-business-details-page.html
@@ -1249,7 +1249,7 @@ bdb = business dashboard;
                           </div>
                           <div class="">
                             <h5 class="">Logiology</h5>
-                            <h4>Branding design for Fintech startup</h4>
+                            <h4 class="h-font">Project status</h4>
                           </div>
                         </div>
                         <div class="tags mb-3">
