--- a/business/project-initial/project-initial-business-details-page.html
+++ b/business/project-initial/project-initial-business-details-page.html
@@ -1248,7 +1248,7 @@ bdb = business dashboard;
                             <img src="https://i.pravatar.cc/44" alt="" />
                           </div>
                           <div class="">
-                            <h5 class="">Logiology</h5>
+                            <h5 class="">Logiology mmm</h5>
                             <h4 class="h-font">Project status</h4>
                           </div>
                         </div>
